# deterministic-math

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all-in-one.py
.github/workflows/: main.yml
include/: cases.h  features.h  libm.h  math.h
scripts/: all-in-one.py
src/: cases.c  determinism_test.c  gen.py
src/math/: __rem_pio2.c  __sin.c  degrees.c  exp_data.h  fabs.c  factorial.c  fmod.c  fsum.c  gcd.c  log2.c  log2_data.h  log_data.h  pow.c  radians.c  sin.c  sqrt_data.h  trunc.c
